<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/create_account_padding"
    tools:context=".view.authentication.RegisterFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_create_account_margin_top"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/create_account_title"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_layout_username_margin_top"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/textViewTitleLogin"
        app:layout_constraintStart_toStartOf="@id/textViewTitleLogin"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_user_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/outlinedTextFieldUsername"
        app:layout_constraintStart_toStartOf="@id/outlinedTextFieldUsername"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldUsername"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_create_account_margin_top"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/create_account"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@id/outlinedTextFieldPassword"
        app:layout_constraintStart_toStartOf="@id/outlinedTextFieldPassword"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>