<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/create_account_padding"
    tools:context=".view.authentication.ForgotPasswordFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewTitleResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgot_password_margin_top"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/reset_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/create_account_title"
        app:layout_constraintBottom_toTopOf="@id/outlinedTextFieldEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_layout_email_margin_top"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/textViewTitleResetPassword"
        app:layout_constraintStart_toStartOf="@id/textViewTitleResetPassword"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleResetPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_reset_password_margin_top"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/reset_password"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@id/outlinedTextFieldEmail"
        app:layout_constraintStart_toStartOf="@id/outlinedTextFieldEmail"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>